# drake

./: .clang-format  BUILD.bazel  CMakeLists.txt  LICENSE.TXT  MODULE.bazel  README.md  TODO  WORKSPACE  WORKSPACE.bzlmod  aaa-native.patch  big-dotty.txt  call-exact.dot  call-simple.dot  fix.pl  renames.sh  syms.sh
bindings/: BUILD.bazel
bindings/pydrake/math/: BUILD.bazel  _math_extra.py  math_py.cc  math_py.h  math_py_auto_diff.cc  math_py_bary_bspline.cc  math_py_eigen_geometry.cc  math_py_equation.cc  math_py_gradient.cc  math_py_matrix_util.cc  math_py_monolith.cc  math_py_overloads.cc  math_py_rigid_transform.cc  math_py_rotations.cc
bindings/pydrake/math/test/: auto_diff_test_util_py.cc  eigen_geometry_test.py  math_test.py
bindings/pydrake/multibody/: BUILD.bazel  all.py  math.py  multibody_py.cc  multibody_py.h  multibody_py_benchmarks.cc  multibody_py_inverse_kinematics.cc  multibody_py_math.cc  multibody_py_meshcat.cc  multibody_py_optimization.cc  multibody_py_parsing.cc  multibody_py_plant.cc  multibody_py_tree.cc  plant_py.cc  tree_py.cc
bindings/pydrake/multibody/examples/: jupyter_widgets_examples.ipynb
bindings/pydrake/multibody/test/: inverse_kinematics_test.py  optimization_test.py  plant_test.py
bookworm/: .dockerignore  .gitignore  Dockerfile  build.py
cmake/: WORKSPACE.bzlmod.in  bazel.rc.in
common/: BUILD.bazel  add_text_logging_gflags.cc  autodiff.h  autodiff_overloads.h  bit_cast.h  copyable_unique_ptr.h  default_scalars.h  diagnostic_policy.cc  diagnostic_policy.h  drake_assert.cc  drake_assert_and_throw.cc  eigen_types.h  fast_pimpl.h  file_source.h  find_loaded_library.cc  find_loaded_library.h  find_resource.cc  find_runfiles.cc  fmt.h  fmt_eigen.cc  fmt_eigen.h  fmt_ostream.h  identifier.cc  identifier.h  is_approx_equal_abstol.h  is_cloneable.h  is_less_than_comparable.h  never_destroyed.h  nice_type_name.cc  nice_type_name.h  polynomial.cc  polynomial.h  sorted_pair.h  sorted_triplet.cc  symbolic_expression.cc  symbolic_expression.h  symbolic_expression_cell.cc  symbolic_expression_cell.h  symbolic_polynomial.cc  text_logging.cc  (+13 more)
common/autodiff/: BUILD.bazel  autodiff.txt  functors.h  operations.h  scalar.cc  scalar.h
common/autodiff/test/: heap_test.cc  matrix_test.cc
common/trajectories/test_utilities/: BUILD.bazel
doc/: BUILD.bazel  defs.py
geometry/: BUILD.bazel  drake_visualizer.cc  geometry_properties.h  geometry_state.cc  geometry_state.h  in_memory_mesh.cc  internal_geometry.cc  internal_gltf_vtk.cc  kinematics_vector.cc  kinematics_vector.h  meshcat.cc  meshcat.h  meshcat_internal.cc  meshcat_internal.h  meshcat_params.h  meshcat_point_cloud_visualizer.cc  meshcat_point_cloud_visualizer.h  meshcat_types.h  meshcat_types_internal.h  meshcat_visualizer.cc  meshcat_visualizer.h  meshcat_visualizer_base.cc  meshcat_visualizer_base.h  proximity_engine.cc  (+6 more)
lcm/test_utilities/: BUILD.bazel  lcmt_drake_signal_utils.cc
manipulation/models/iiwa_description/: BUILD.bazel
manipulation/models/wsg_50_description/: BUILD.bazel  README.md
manipulation/models/wsg_50_description/sdf/: schunk_wsg_50_ball_contact.sdf
manipulation/models/wsg_50_description/sources/: schunk_wsg_50.sdf.xacro  schunk_wsg_50.xacro  schunk_wsg_50_ball_contact.sdf.xacro
manipulation/models/wsg_50_description/test/: xacro_cross_check_test.py
systems/benchmarking/: BUILD.bazel  README.md  analysis_benchmarks.cc  framework_benchmark
systems/controllers/test_utilities/: BUILD.bazel  zmp_test_util.cc
systems/framework/test_utilities/: BUILD.bazel  initialization_test_system.h  vec1.named_vector  vec2.named_vector  vec3.named_vector
tools/flags/: BUILD.bazel
tools/performance/: BUILD.bazel  benchmark_tool.py  defs.bzl
tools/skylark/: BUILD.bazel  README.md  cc.bzl  drake_cc.bzl  drake_py.bzl  kwargs.bzl  pybind.bzl
tools/vendor_iostream/: BUILD.bazel  drake_cout_cerr.cc  drake_cout_cerr.h  drake_replacement_stream.cc  drake_replacement_stream.h  drake_std_cout_cerr.h
tools/workspace/abseil_cpp_internal/: BUILD.bazel  defs.bzl  repository.bzl
tools/workspace/abseil_cpp_internal/patches/upstream/: no_iostream.patch  specific_upstream_includes.patch
tools/workspace/eigen/: BUILD.bazel  repository.bzl
tools/workspace/eigen_internal/: BUILD.bazel  amalgamator.bzl  amalgamator.py  package.BUILD.bazel  repository.bzl
tools/workspace/eigen_internal_fromsource/: package.BUILD.bazel  repository.bzl
tools/workspace/fmt/: BUILD.bazel  package.BUILD.bazel  repository.bzl
tools/workspace/fmt/patches/: visibility.patch
tools/workspace/fmt_internal_fromsource/: BUILD.bazel  package.BUILD.bazel  repository.bzl
tools/workspace/gfortran_internal/: BUILD.bazel  fortran.bzl  package.BUILD.bazel
tools/workspace/glib/: BUILD.bazel
tools/workspace/hwloc_internal/: package.BUILD.bazel  repository.bzl
tools/workspace/ipopt_internal/: package.BUILD.bazel  repository.bzl
tools/workspace/ipopt_internal/patches/upstream/: iostream_includes.patch
tools/workspace/ktx_software_internal/: BUILD.bazel  ktx.py  package.BUILD.bazel  repository.bzl
tools/workspace/lapack_internal/: package.BUILD.bazel  repository.bzl  sources.bzl
tools/workspace/lcm/: BUILD.bazel  lcm.bzl  package.BUILD.bazel  repository.bzl
tools/workspace/lcm/patches/: copts.patch  drake_shared_library.patch  install.patch  respell_bzlmod_deps.patch
visualization/: BUILD.bazel  colorize_depth_image.cc  colorize_depth_image.h  concatenate_images.cc  contact_visualizer.cc  contact_visualizer.h  drake_visualizer.cc  drake_visualizer.h  drake_visualizer_params.h  hydroelastic_contact_visualizer.cc  hydroelastic_contact_visualizer.h  inertia_visualizer.cc  joint_sliders.cc  lcm_image_stream_worker.cc  lcm_image_stream_worker.h  meshcat_point_cloud_visualizer.cc  meshcat_point_cloud_visualizer.h  meshcat_visualizer.cc  meshcat_visualizer.h  meshcat_visualizer_params.h  point_contact_visualizer.cc  point_contact_visualizer.h  visualization_config_functions.cc  visualization_config_functions.h
visualization/test/: colorize_depth_image_test.cc  visualization_config_functions_test.cc
(+1197 files in other folders)
