# This file marks a workspace root for the Bazel build system.
# See `https://bazel.build/`.

# This file lists Drake's external dependencies as known to bzlmod.
#
# When bzlmod is disabled (the default), this file is NOT used.
# Instead, only WORKSPACE is used.
#
# When bzlmod is enabled, this file + WORKSPACE.bzlmod are both used,
# and WORKSPACE is ignored.

module(name = "drake")

bazel_dep(name = "rules_cc", version = "0.0.9")
