# This file marks a workspace root for the Bazel build system.
# See `https://bazel.build/`.

# This file lists Drake's external dependencies as known to bzlmod. It is used
# in concert with WORKSPACE.bzlmod (which has the workspace-style externals).

module(name = "drake")

# Add starlark rules.

bazel_dep(name = "apple_support", version = "1.17.1", repo_name = "build_bazel_apple_support")  # noqa
bazel_dep(name = "bazel_features", version = "1.22.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "rules_rust", version = "0.56.0")
bazel_dep(name = "rules_shell", version = "0.3.0")

# Customize our toolchains.

cc_configure = use_extension(
    "@rules_cc//cc:extensions.bzl",
    "cc_configure_extension",
)
use_repo(cc_configure, "local_config_cc")

register_toolchains(
    "//tools/py_toolchain:toolchain",
    "//tools/py_toolchain:exec_tools_toolchain",
)

# Add C++ dependencies that are part of our public API.
#
# We declare these dependencies twice -- as modules (bazel_dep) and repository
# rules (pkgconfig). The choice of whether module vs pkgconfig will be used is
# governed by the flags declared at drake/tools/flags/BUILD.bazel.
#
# For our CMake builds from source, the "WITH_USER_..." CMake options to choose
# the flavor are translated into the matching Bazel flags.
#
# For wheel builds, the module flavor is always used.
#
# For Bazel builds using Drake as an external, the module flavor is used by
# default but can be changed using the Bazel flags.
#
# For first-party Bazel builds (by Drake Developres), the pkgconfig flavor is
# used by default but can be changed using the Bazel flags.

bazel_dep(name = "eigen", version = "3.4.0.bcr.2")
bazel_dep(name = "spdlog", version = "1.15.0.bcr.3")
bazel_dep(name = "fmt", version = "11.0.2.bcr.1")

eigen_repository = use_repo_rule(
    "@drake//tools/workspace/eigen:repository.bzl",
    "eigen_repository",
)

eigen_repository(name = "pkgconfig_eigen")

fmt_repository = use_repo_rule(
    "@drake//tools/workspace/fmt:repository.bzl",
    "fmt_repository",
)

fmt_repository(name = "pkgconfig_fmt")

spdlog_repository = use_repo_rule(
    "@drake//tools/workspace/spdlog:repository.bzl",
    "spdlog_repository",
)

spdlog_repository(name = "pkgconfig_spdlog")

# Add C++ dependencies that are private (i.e., linked to but not used in API).
#
# Where possible, we declare these modules but we also still allow the choice
# of using pkgconfig, similar to the public C++ dependencies above.

bazel_dep(name = "zlib", version = "1.3.1.bcr.4")

zlib_repository = use_repo_rule(
    "@drake//tools/workspace/zlib:repository.bzl",
    "zlib_repository",
)

zlib_repository(name = "pkgconfig_zlib")

# We'll use the non_module_dependencies wrapper to load dependencies that are
# still phrased as repository rules.

non_module_dependencies = use_extension(
    "//tools/workspace:default.bzl",
    "non_module_dependencies",
)

# Add more build tools and related configuration repositories.
# TODO(jwnimmer-tri) Try to cite https://registry.bazel.build for:
# - nasm

use_repo(
    non_module_dependencies,
    "cc",
    "gfortran",
    "nasm",
    "python",
    "rules_python_drake_constants",
)

# Add C++ dependencies that are part of our public API but should not be.
# TODO(jwnimmer-tri) Try to cite https://registry.bazel.build for:
# - pybind11_bazel or nanobind_bazel

use_repo(
    non_module_dependencies,
    "lcm",
    "pybind11",
)

# Add vendored C++ and Fortran build dependencies.

use_repo(
    non_module_dependencies,
    "abseil_cpp_internal",
    "ccd_internal",
    "clarabel_cpp_internal",
    "clp_internal",
    "coinutils_internal",
    "common_robotics_utilities_internal",
    "conex_internal",
    "csdp_internal",
    "curl_internal",
    "fcl_internal",
    "gklib_internal",
    "gz_math_internal",
    "gz_utils_internal",
    "highway_internal",
    "ipopt_internal",
    "libjpeg_turbo_internal",
    "libpng_internal",
    "libtiff_internal",
    "metis_internal",
    "msgpack_internal",
    "nanoflann_internal",
    "nlohmann_internal",
    "nlopt_internal",
    "onetbb_internal",
    "openusd_internal",
    "osqp_internal",
    "picosha2_internal",
    "poisson_disk_sampling_internal",
    "qdldl_internal",
    "qhull_internal",
    "scs_internal",
    "sdformat_internal",
    "snopt",  # XXX rename
    "spgrid_internal",
    "spral_internal",
    "stduuid_internal",
    "suitesparse_internal",
    "tinygltf_internal",
    "tinyobjloader_internal",
    "tinyxml2_internal",
    "usockets_internal",
    "uwebsockets_internal",
    "voxelized_geometry_tools_internal",
    "vtk_internal",
    "yaml_cpp_internal",
)

# Add shared library C++ build dependencies.

use_repo(
    non_module_dependencies,
    # XXX Move this into "private dependencies" above and add flags for
    # default, pkgconfig, apple_framework.
    "blas",
    "lapack",
    "opencl",
    "opengl",
    # XXX Move this into "private dependencies" above and add flags for
    # default, pkgconfig.
    "glx",
    "x11",
    # XXX Hopefully this will be dropped from Drake pretty soon.
    "mumps_internal",
    # LGPL dependencies, so we'll always just use the OS's shared library.
    "glib",
    # Closed-source commercial solvers distributed solely as shared libraries.
    "gurobi",
    "mosek",
)

# Add Python build dependencies.

use_repo(
    non_module_dependencies,
    "clang_cindex_python3_internal",
    "gymnasium_py",
    "mypy_extensions_internal",
    "mypy_internal",
    "ros_xacro_internal",
    "stable_baselines3_internal",
    "tomli_internal",
    "typing_extensions_internal",
)

# Add Java build dependencies.

use_repo(
    non_module_dependencies,
    "com_jidesoft_jide_oss",
    "commons_io",
    "net_sf_jchart2d",
    "org_apache_xmlgraphics_commons",
)

# Add data build dependencies.

use_repo(
    non_module_dependencies,
    "drake_models",
    "meshcat",
    "statsjs",
)

# Add test-only / doc-only / maintainer-only dependencies.

use_repo(
    non_module_dependencies,
    "bazelisk",
    "buildifier",
    "dm_control_internal",
    "doxygen",
    "gflags",
    "github3_py_internal",
    "googlebenchmark",
    "gtest",
    "mpmath_py_internal",
    "mujoco_menagerie_internal",
    "pycodestyle",
    "styleguide",
    "sympy_py_internal",
    "uritemplate_py_internal",
    "xmlrunner_py",
)

# Add crate_universe dependencies.
non_module_crate_universe_dependencies = use_extension(
    "//tools/workspace:default.bzl",
    "non_module_crate_universe_dependencies",
)
use_repo(
    non_module_crate_universe_dependencies,
    "crate__amd-0.2.2",
    "crate__autocfg-1.4.0",
    "crate__blas-0.22.0",
    "crate__blas-sys-0.7.1",
    "crate__cfg-if-1.0.0",
    "crate__clarabel-0.9.0",
    "crate__darling-0.14.4",
    "crate__darling_core-0.14.4",
    "crate__darling_macro-0.14.4",
    "crate__derive_builder-0.11.2",
    "crate__derive_builder_core-0.11.2",
    "crate__derive_builder_macro-0.11.2",
    "crate__either-1.13.0",
    "crate__enum_dispatch-0.3.13",
    "crate__equivalent-1.0.1",
    "crate__fnv-1.0.7",
    "crate__hashbrown-0.15.2",
    "crate__ident_case-1.0.1",
    "crate__indexmap-2.7.0",
    "crate__itertools-0.11.0",
    "crate__itoa-1.0.14",
    "crate__lapack-0.19.0",
    "crate__lapack-sys-0.14.0",
    "crate__lazy_static-1.5.0",
    "crate__libc-0.2.168",
    "crate__memchr-2.7.4",
    "crate__num-complex-0.4.6",
    "crate__num-traits-0.2.19",
    "crate__once_cell-1.19.0",
    "crate__paste-1.0.15",
    "crate__proc-macro2-1.0.92",
    "crate__quote-1.0.37",
    "crate__ryu-1.0.18",
    "crate__serde-1.0.216",
    "crate__serde_derive-1.0.216",
    "crate__serde_json-1.0.133",
    "crate__strsim-0.10.0",
    "crate__syn-1.0.109",
    "crate__syn-2.0.90",
    "crate__thiserror-1.0.69",
    "crate__thiserror-impl-1.0.69",
    "crate__unicode-ident-1.0.14",
)
