# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_package_library(
    name = "visualization",
    visibility = ["//visibility:public"],
    deps = [
        ":colorize_depth_image",
        ":visualizer_config",
        ":visualizer_config_functions",
    ],
)

drake_cc_library(
    name = "colorize_depth_image",
    srcs = ["colorize_depth_image.cc"],
    hdrs = ["colorize_depth_image.h"],
    deps = [
        "//systems/framework:leaf_system",
        "//systems/sensors:image",
    ],
)

drake_cc_googletest(
    name = "colorize_depth_image_test",
    deps = [
        ":colorize_depth_image",
        "//systems/framework/test_utilities:scalar_conversion",
    ],
)

drake_cc_library(
    name = "visualizer_config",
    srcs = ["visualizer_config.cc"],
    hdrs = ["visualizer_config.h"],
    deps = [
        "//common:name_value",
        "//geometry:drake_visualizer_params",
        "@eigen",
    ],
)

drake_cc_library(
    name = "visualizer_config_functions",
    srcs = ["visualizer_config_functions.cc"],
    hdrs = ["visualizer_config_functions.h"],
    deps = [
        ":visualizer_config",
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/framework:diagram_builder",
        "//systems/lcm:lcm_buses",
    ],
)

drake_cc_googletest(
    name = "visualizer_config_functions_test",
    deps = [
        ":visualizer_config_functions",
        "//lcm:drake_lcm",
        "//systems/analysis:simulator",
    ],
)

add_lint_tests()
