# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_library(
    name = "autodiff",
    srcs = ["scalar.cc"],
    hdrs = [
        "functors.h",
        "scalar.h",
        "operations.h"
    ],
    deps = [
        "//common:essential",
        "//common:reset_after_move",
    ],
)

drake_cc_googletest(
    name = "heap_test",
    deps = [
        ":autodiff",
        "//common/test_utilities:limit_malloc",
    ],
)


drake_cc_googletest(
    name = "matrix_test",
    deps = [
        ":autodiff",
        "//common/test_utilities:limit_malloc",
    ],
)

# XXX need lint tests
