# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

# Because there are no meaninfully distinct components in this package, the
# only public target we will offer is our drake_cc_package_library.
package(default_visibility = ["//visibility:private"])

drake_cc_package_library(
    name = "test_utilities",
    testonly = 1,
    deps = [
        ":lcmt_drake_signal_utils",
    ],
)

drake_cc_library(
    name = "lcmt_drake_signal_utils",
    testonly = 1,
    srcs = ["lcmt_drake_signal_utils.cc"],
    hdrs = ["lcmt_drake_signal_utils.h"],
    deps = [
        "//common:essential",
        "//lcmtypes:drake_signal",
    ],
)

drake_cc_googletest(
    name = "lcmt_drake_signal_utils_test",
    deps = [
        ":lcmt_drake_signal_utils",
    ],
)

add_lint_tests()
