# -*- python -*-

load(
    "@drake//tools/performance:defs.bzl",
    "drake_cc_googlebench_binary",
    "drake_py_experiment_binary",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:private"])

drake_cc_googlebench_binary(
    name = "analysis_benchmarks",
    srcs = ["analysis_benchmarks.cc"],
    deps = [
        "//systems/analysis:monte_carlo",
        "//systems/framework:diagram_builder",
        "//tools/performance:fixture_common",
    ],
)

drake_py_experiment_binary(
    name = "analysis_experiment",
    googlebench_binary = ":analysis_benchmarks",
)

drake_cc_googlebench_binary(
    name = "framework_benchmarks",
    srcs = ["framework_benchmarks.cc"],
    deps = [
        "//systems/framework:diagram_builder",
        "//systems/primitives:pass_through",
        "//tools/performance:fixture_common",
    ],
)

drake_py_experiment_binary(
    name = "framework_experiment",
    googlebench_binary = ":framework_benchmarks",
)

add_lint_tests()
