# -*- python -*-

load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/skylark:drake_py.bzl", "drake_py_binary")

package(default_visibility = ["//visibility:public"])

drake_py_binary(
    name = "benchmark_tool",
    testonly = True,
    srcs = ["benchmark_tool.py"],
    data = [
        "//tools/workspace/cc:compiler.txt",
    ],
)

add_lint_tests()
