# -*- python -*-

load("@drake//tools/install:install.bzl", "install")
load(
    "@drake//tools/skylark:pybind.bzl",
    "add_pybind_coverage_data",
    "drake_pybind_library",
    "get_drake_py_installs",
    "get_pybind_package_info",
)
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_unittest",
)
load("//bindings/pydrake:pydrake.bzl", "add_lint_tests_pydrake")
load("//tools/jupyter:jupyter_py.bzl", "drake_jupyter_py_binary")

package(default_visibility = [
    "//bindings/pydrake:__subpackages__",
])

# This determines how `PYTHONPATH` is configured, and how to install the
# bindings.
PACKAGE_INFO = get_pybind_package_info("//bindings")

drake_pybind_library(
    name = "multibody",
    cc_deps = [
        "//bindings/pydrake:documentation_pybind",
        "//bindings/pydrake/common:cpp_template_pybind",
        "//bindings/pydrake/common:default_scalars_pybind",
        "//bindings/pydrake/common:deprecation_pybind",
        "//bindings/pydrake/common:eigen_geometry_pybind",
        "//bindings/pydrake/common:eigen_pybind",
        "//bindings/pydrake/common:monostate_pybind",
        "//bindings/pydrake/common:serialize_pybind",
        "//bindings/pydrake/common:sorted_pair_pybind",
        "//bindings/pydrake/common:type_pack",
        "//bindings/pydrake/common:type_safe_index_pybind",
        "//bindings/pydrake/common:value_pybind",
    ],
    cc_so_name = "__init__",
    cc_srcs = [
        "multibody_py.cc",
        "multibody_py.h",
        "multibody_py_benchmarks.cc",
        "multibody_py_inverse_kinematics.cc",
        "multibody_py_math.cc",
        "multibody_py_meshcat.cc",
        "multibody_py_optimization.cc",
        "multibody_py_parsing.cc",
        "multibody_py_plant.cc",
        "multibody_py_tree.cc",
    ],
    package_info = PACKAGE_INFO,
    py_deps = [
        "//bindings/pydrake/common:cpp_template_py",
        "//bindings/pydrake/common:eigen_geometry_py",
        "//bindings/pydrake/common:value_py",
        "//bindings/pydrake/solvers",
        "//bindings/pydrake/systems:framework_py",
        "//bindings/pydrake:geometry_py",
        "//bindings/pydrake:math_py",
        "//bindings/pydrake:module_py",
    ],
    py_srcs = [
        "all.py",
        "math.py",
    ],
)

# XXX install me!
drake_py_library(
    name = "jupyter_widgets_py",
    srcs = ["jupyter_widgets.py"],
    imports = PACKAGE_INFO.py_imports,
    deps = [
        ":multibody",
        "//bindings/pydrake/common:jupyter_py",
        "//bindings/pydrake/systems:framework_py",
    ],
)

install(
    name = "install",
    targets = [":multibody"],
    py_dest = PACKAGE_INFO.py_dest,
    deps = get_drake_py_installs([":multibody"]),
)

drake_jupyter_py_binary(
    name = "examples/door_hinge_inspector",
    add_test_rule = 1,
    deps = [
        ":multibody",
    ],
)

filegroup(
    name = "models",
    srcs = glob([
        "**/*.sdf",
    ]),
)

drake_jupyter_py_binary(
    name = "examples/jupyter_widgets_examples",
    add_test_rule = 1,
    data = [
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":multibody",
        "//bindings/pydrake:geometry_py",
        "//bindings/pydrake/systems:analysis_py",
        "//bindings/pydrake/systems:framework_py",
        "//bindings/pydrake/systems:rendering_py",
    ],
)

drake_py_unittest(
    name = "parsing_test",
    data = [
        "//examples/atlas:models",
        "//multibody/benchmarks/acrobot:models",
        "//multibody/parsing:process_model_directives_test_models",
        "//multibody/parsing:test_models",
    ],
    deps = [
        ":multibody",
    ],
)

drake_py_unittest(
    name = "plant_test",
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "//multibody:models",
        "//multibody/benchmarks/acrobot:models",
        "//multibody/benchmarks/free_body:models",
    ],
    deps = [
        ":multibody",
        "//bindings/pydrake/common/test_utilities:deprecation_py",
        "//bindings/pydrake/common/test_utilities:numpy_compare_py",
        "//bindings/pydrake/common/test_utilities:pickle_compare_py",
        "//bindings/pydrake/systems:analysis_py",
        "//bindings/pydrake/systems:scalar_conversion_py",
    ],
)

drake_py_unittest(
    name = "math_test",
    deps = [
        ":multibody",
        "//bindings/pydrake/common/test_utilities",
    ],
)

drake_py_unittest(
    name = "meshcat_test",
    data = [
        "//multibody/benchmarks/acrobot:models",
    ],
    deps = [
        ":multibody",
        "//bindings/pydrake/common/test_utilities:numpy_compare_py",
    ],
)

drake_py_unittest(
    name = "inverse_kinematics_test",
    data = [
        ":models",
    ],
    deps = [
        ":multibody",
        "//bindings/pydrake/common/test_utilities",
    ],
)

drake_py_unittest(
    name = "optimization_test",
    timeout = "moderate",
    deps = [
        ":multibody",
        "//bindings/pydrake:trajectories_py",
        "//bindings/pydrake/common/test_utilities",
        "//bindings/pydrake/solvers",
    ],
)

add_pybind_coverage_data()

add_lint_tests_pydrake()
