# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

# Because there are no meaninfully distinct components in this package, the
# only public target we will offer is our drake_cc_package_library.
package(default_visibility = ["//visibility:private"])

drake_cc_package_library(
    name = "test_utilities",
    testonly = 1,
    deps = [
        ":random_piecewise_polynomial",
    ],
)

drake_cc_library(
    name = "random_piecewise_polynomial",
    testonly = 1,
    hdrs = ["random_piecewise_polynomial.h"],
    deps = [
        "//drake/common/test_utilities:random_polynomial_matrix",
    ],
)

add_lint_tests()
