load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
)
load("//tools/skylark:drake_data.bzl", "models_filegroup")
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/lint:model_lint.bzl", "model_lint_test")

package(default_visibility = ["//visibility:public"])

models_filegroup(
    name = "glob_models",
    visibility = ["//visibility:private"],
)

filegroup(
    name = "licenses",
    srcs = [
        "LICENSE.TXT",
        "iiwa_stack.LICENSE.txt",
    ],
)

install_data(
    name = "install_data",
    data = [
        ":glob_models",
        ":licenses",
    ],
)

filegroup(
    name = "models",
    srcs = [
        ":glob_models",
        ":licenses",
        "@drake_models//:iiwa_description/meshes/iiwa14/collision/link_0.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/collision/link_1.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/collision/link_2.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/collision/link_3.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/collision/link_4.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/collision/link_5.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/collision/link_6.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/collision/link_7.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/collision/link_7_polytope.obj",  # noqa
        "@drake_models//:iiwa_description/meshes/iiwa14/visual/band.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/visual/kuka.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/visual/link_0.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/visual/link_1.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/visual/link_2_grey.obj",  # noqa
        "@drake_models//:iiwa_description/meshes/iiwa14/visual/link_2_orange.obj",  # noqa
        "@drake_models//:iiwa_description/meshes/iiwa14/visual/link_3.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/visual/link_4_grey.obj",  # noqa
        "@drake_models//:iiwa_description/meshes/iiwa14/visual/link_4_orange.obj",  # noqa
        "@drake_models//:iiwa_description/meshes/iiwa14/visual/link_5.obj",
        "@drake_models//:iiwa_description/meshes/iiwa14/visual/link_6_grey.obj",  # noqa
        "@drake_models//:iiwa_description/meshes/iiwa14/visual/link_6_orange.obj",  # noqa
        "@drake_models//:iiwa_description/meshes/iiwa14/visual/link_7.obj",
        "@drake_models//:iiwa_description/meshes/iiwa7/visual/link_0.obj",
        "@drake_models//:iiwa_description/meshes/iiwa7/visual/link_1.obj",
        "@drake_models//:iiwa_description/meshes/iiwa7/visual/link_2.obj",
        "@drake_models//:iiwa_description/meshes/iiwa7/visual/link_3.obj",
        "@drake_models//:iiwa_description/meshes/iiwa7/visual/link_4.obj",
        "@drake_models//:iiwa_description/meshes/iiwa7/visual/link_5.obj",
        "@drake_models//:iiwa_description/meshes/iiwa7/visual/link_6.obj",
        "@drake_models//:iiwa_description/meshes/iiwa7/visual/link_7.obj",
    ],
)

# === test/ ===

drake_cc_googletest(
    name = "iiwa14_variants_parsing_test",
    srcs = ["test/iiwa14_variants_parsing_test.cc"],
    data = [":models"],
    deps = [
        "//common:find_resource",
        "//common/test_utilities:eigen_matrix_compare",
        "//multibody/parsing",
    ],
)

model_lint_test(
    name = "model_lint",
    srcs = [":glob_models"],
    data = [":models"],
)

add_lint_tests()
