load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
)
load(
    "//tools/skylark:drake_py.bzl",
    "drake_py_unittest",
)
load("//tools/skylark:drake_data.bzl", "models_filegroup")
load("//tools/install:install_data.bzl", "install_data")
load("//tools/workspace/ros_xacro_internal:defs.bzl", "xacro_filegroup")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = [":__subpackages__"])

models_filegroup(
    name = "glob_models",
    visibility = ["//visibility:private"],
)

install_data(
    name = "install_data",
    data = [":glob_models"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "models",
    srcs = [
        ":glob_models",
        "@drake_models//:wsg_50_description/meshes/finger_with_tip.obj",
        "@drake_models//:wsg_50_description/meshes/finger_without_tip.obj",
        "@drake_models//:wsg_50_description/meshes/wsg_body.obj",
    ],
    visibility = ["//visibility:public"],
)

# === test/ ===

xacro_filegroup(
    name = "xacro",
    srcs = [
        "sources/schunk_wsg_50.sdf.xacro",
        "sources/schunk_wsg_50_ball_contact.sdf.xacro",
    ],
    data = [
        "sources/schunk_wsg_50.xacro",
    ],
)

drake_py_unittest(
    name = "xacro_cross_check_test",
    data = [
        ":glob_models",
        ":xacro",
    ],
    deps = [
        "@bazel_tools//tools/python/runfiles",
    ],
)

drake_cc_googletest(
    name = "wsg_50_sdf_test",
    data = [":models"],
    deps = [
        "//common:find_resource",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

add_lint_tests()
