load("//tools/install:install.bzl", "install_files")
load("//tools/lint:lint.bzl", "add_lint_tests")
load(":defs.bzl", "absl_cc_library")

absl_cc_library(
    name = "flat_hash_set",
    deps = ["@module_abseil//absl/container:flat_hash_set"],
    visibility = ["//:__subpackages__"],
)

absl_cc_library(
    name = "inlined_vector",
    deps = ["@module_abseil//absl/container:inlined_vector"],
    visibility = ["//:__subpackages__"],
)

install_files(
    name = "install",
    dest = "share/doc/abseil_cpp",
    files = [
        "@abseil_cpp_internal//:AUTHORS",
        "@abseil_cpp_internal//:LICENSE",
    ],
    allowed_externals = [
        "@abseil_cpp_internal//:LICENSE",
    ],
    visibility = ["//tools/workspace:__pkg__"],
)

add_lint_tests()
