load("//tools/install:install.bzl", "install_files")
load("//tools/lint:lint.bzl", "add_lint_tests")

install_files(
    name = "install",
    dest = "share/doc/abseil_cpp",
    files = [
        "@module_abseil//:AUTHORS",
        "@module_abseil//:LICENSE",
    ],
    allowed_externals = [
        "@module_abseil//:LICENSE",
    ],
    visibility = ["//tools/workspace:__pkg__"],
)

add_lint_tests()
